--- a/app/template/mh_section.html
+++ b/app/template/mh_section.html
@@ -3,11 +3,13 @@
     
 </head>
 <body>
+<h3 style="font-size:xxx-large;"><a href="/mh/{{ mh_name }}">目录： {{mh_name}}</a></h3>
+<h1 style="font-size:xxx-large;">{{section_name }} - {{ mh_name }} </h2>
 <div style="width: 100%;">
-{% for img_id in range(1,img_count+1) %}
-<img width="auto" src="https://mhpic.jumanhua.com/comic/D/斗破苍穹拆分版/{{section_id}}话/{{img_id}}.jpg-kaimh.high.webp">
+{% for img_url in img_urls %}
+<img width="auto" src="{{img_url}}">
 {% endfor%}
 </div>
 
-<h3 style="text-align: center"><a href="{{nxt_url}}"> {{nxt_name}}</a></h3>
+<h3 style="text-align: center;font-size:xxx-large;"><a href="{{ nxt_url }}"> {{nxt_name}}</a></h3>
 </body>
