--- a/app/template/index.html
+++ b/app/template/index.html
@@ -7,9 +7,9 @@
 <h1>蕾蕾的秘密花园</h1>
 <h2>漫画<h2>
 <ul>
-    <li>
-    <h3><a href="/mh/斗破苍穹">斗破苍穹</a> </h3>
-    </li>
+    <li> <h3><a href="/mh/斗破苍穹">斗破苍穹</a> </h3> </li>
+    <li> <h3><a href="/mh/三眼啸天录">三眼啸天录</a> </h3> </li>
+    <li> <h3><a href="/mh/萌三国">萌三国</a> </h3> </li>
 </ul>
 
 </body>
