--- a/app/template/index.html
+++ b/app/template/index.html
@@ -2,14 +2,34 @@
 
 <head>
 <title>蕾蕾的秘密花园</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
+integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container text-center">
+
 <h1>蕾蕾的秘密花园</h1>
-<h2>漫画<h2>
-<ul>
-    <li> <h3><a href="/mh/斗破苍穹">斗破苍穹</a> </h3> </li>
-    <li> <h3><a href="/mh/三眼啸天录">三眼啸天录</a> </h3> </li>
-    <li> <h3><a href="/mh/萌三国">萌三国</a> </h3> </li>
+<div class="card">
+<h2 class="card-title">漫画<h2>
+</div>
+<ul class="list-group">
+    {% for mh_name in mh %}
+
+    <li class="list-group-item"> <h3><a href="/mh/{{mh_name}}">{{mh_name}}</a> </h3> </li>
+    {% endfor %}
+    <!-- <li> <h3><a href="/mh/斗破苍穹">斗破苍穹</a> </h3> </li> -->
+    <!-- <li> <h3><a href="/mh/三眼啸天录">三眼啸天录</a> </h3> </li> -->
+    <!-- <li> <h3><a href="/mh/萌三国">萌三国</a> </h3> </li> -->
 </ul>
+    </div>
 
 </body>
