--- a/app/template/mh_section.html
+++ b/app/template/mh_section.html
@@ -1,15 +1,38 @@
 <head>
     <title> {{section_name }} - {{ mh_name }} </title>
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </head>
-<body>
-<h3 style="font-size:xxx-large;"><a href="/mh/{{ mh_name }}">目录： {{mh_name}}</a></h3>
-<h1 style="font-size:xxx-large;">{{section_name }} - {{ mh_name }} </h2>
-<div style="width: 100%;">
-{% for img_url in img_urls %}
-<img width="auto" src="{{img_url}}">
-{% endfor%}
-</div>
 
-<h3 style="text-align: center;font-size:xxx-large;"><a href="{{ nxt_url }}"> {{nxt_name}}</a></h3>
+<body>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">蕾蕾的秘密花园</a></li>
+    <li class="breadcrumb-item"><a href="/mh/{{mh_name}}">{{mh_name}}</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{section_name }}</li>
+  </ol>
+</nav>
+    <div class="container text-center">
+
+        <!-- <h1 ><a  href="/mh/{{ mh_name }}">目录： {{mh_name}}</a></h3> -->
+            <h1 class="title">{{section_name }} - {{ mh_name }} </h2>
+                <div class="content">
+                    {% for img_url in img_urls %}
+                    <div class="col-md-12">
+                        <img class="w-auto"  src="{{img_url}}">
+                    </div>
+                    {% endfor%}
+                </div>
+
+                <h1 ><a class="badge badge-secondary" href="{{ nxt_url }}"> {{nxt_name}}</a></h3>
+    </div>
 </body>
