--- a/app/template/mh_toc.html
+++ b/app/template/mh_toc.html
@@ -1,16 +1,29 @@
 <head>
     <title>{{ title }} - 蕾蕾的秘密花园</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>{{ title }} - 蕾蕾的秘密花园</h1>
-    <ul>
-        {% for section in sections %}
-        <li>
-            <span>  <a href="{{ section['url'] }}"> {{ section['name']  }} </a> </span>
-        </li>
-        {% endfor %}
-        <li><a href="/mh/update/{{mh_name}}">===更新目录===</a></li>
-    </ul>
+    <div class="container text-center">
+        <h1>{{ title }} - 蕾蕾的秘密花园</h1>
+        <ul class="list-group row">
+            {% for section in sections %}
+            <li class="list-group-item ">
+                <h3> <a href="{{ section['url'] }}"> {{ section['name']  }} </a> </h3>
+            </li>
+            {% endfor %}
+            <li><a href="/mh/update/{{mh_name}}">===更新目录===</a></li>
+        </ul>
+    </div>
 
 </body>
