--- a/app/template/mh_section.html
+++ b/app/template/mh_section.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container text-center">
+    <div class="container-fluid text-center">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">蕾蕾的秘密花园</a></li>
@@ -33,6 +33,10 @@
                 {% endfor%}
             <!-- </div> -->
 
+            <hr/>
             <h1><a class="badge badge-secondary" href="{{ nxt_url }}"> {{nxt_name}}</a></h3>
+            <hr/>
+            <p></p>
+            <p></p>
     </div>
 </body>
