update to relatic path

--- a/app/template/mh_toc.html
+++ b/app/template/mh_toc.html
@@ -22,7 +22,7 @@
                 <h3> <a href="{{ section['url'] }}"> {{ section['name']  }} </a> </h3>
             </li>
             {% endfor %}
-            <li><a href="/mh/update/{{mh_name}}">===更新目录===</a></li>
+            <li><a href="mh/update/{{mh_name}}">===更新目录===</a></li>
         </ul>
     </div>
 
